#43-part03-chapter03-duplicate-data-by-imagedatagenerator modified:   03_InSpace_Keras_Tutorial/03/03/04_Conv2D_MaxPooling2D_Flatten_Example.ipynb new file:   03_InSpace_Keras_Tutorial/03/03/06_Duplicate_with_ImageDataGenerator.ipynb new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_1447.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_167.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_1848.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_32.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_3320.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_3329.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_3744.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_3779.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_383.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_3889.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_5960.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_6157.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_6557.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_6580.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_6909.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_6933.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_7513.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_754.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_767.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_7709.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_7893.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_8101.png new file:   03_InSpace_Keras_Tutorial/03/03/warehouse/preview/tri_0_8106.png n

--- a/03_InSpace_Keras_Tutorial/03/03/06_Duplicate_with_ImageDataGenerator.ipynb
+++ b/03_InSpace_Keras_Tutorial/03/03/06_Duplicate_with_ImageDataGenerator.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ref = https://tykimos.github.io/2017/03/08/CNN_Getting_Started/"
+    "# ref = https://tykimos.github.io/2017/06/10/CNN_Data_Augmentation/"
    ]
   },
   {
@@ -31,7 +31,8 @@
     "from keras.layers import Flatten\n",
     "from keras.layers.convolutional import Conv2D\n",
     "from keras.layers.convolutional import MaxPooling2D\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
+    "from keras.layers import Dropout\n",
     "\n",
     "# 랜덤 시드 지정하기\n",
     "np.random.seed(3)"
@@ -40,6 +41,36 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2 데이터셋 불러오기 (with duplicate)\n",
+    "data_aug_gen = ImageDataGenerator(rescale=1./255, \n",
+    "                                  rotation_range=15,\n",
+    "                                  width_shift_range=0.1,\n",
+    "                                  height_shift_range=0.1,\n",
+    "                                  shear_range=0.5,\n",
+    "                                  zoom_range=[0.8, 2.0],\n",
+    "                                  horizontal_flip=True,\n",
+    "                                  vertical_flip=True,\n",
+    "                                  fill_mode='nearest')\n",
+    "\n",
+    "img = load_img('warehouse/handwriting_shape/train/triangle/triangle001.png')\n",
+    "x = img_to_array(img)\n",
+    "x = x.reshape((1,) + x.shape)\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "# 이 for는 무한으로 반복되기 때문에 우리가 원하는 반복횟수를 지정하여, 지정된 반복횟수가 되면 빠져나오도록 해야합니다.\n",
+    "for batch in data_aug_gen.flow(x, batch_size=1, save_to_dir='warehouse/preview', save_prefix='tri', save_format='png'):\n",
+    "    i += 1\n",
+    "    if i > 30: \n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +83,25 @@
     }
    ],
    "source": [
-    "# 2 데이터 준비하기\n",
-    "# wget http://tykimos.github.io/warehouse/2017-3-8_CNN_Getting_Started_handwriting_shape.zip\n",
-    "# unzip 2017-3-8_CNN_Getting_Started_handwriting_shape.zip\n",
+    "# 3 데이터셋 생성하기 (with duplicate)\n",
+    "#     ImageDataGenerator\n",
+    "#         rotation_range\n",
+    "#         width_shift_range\n",
+    "#         height_shift_range\n",
+    "#         shear_range\n",
+    "#         zoom_range\n",
+    "#         horizontal_flip\n",
+    "#         vertical_flip\n",
     "\n",
-    "# 3 데이터셋 생성하기\n",
-    "# ImageDataGenerator 클래스의 flow_from_directory 함수를 이용해서 데이터셋을 만든다.\n",
-    "\n",
-    "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255, \n",
+    "                                   rotation_range=10,\n",
+    "                                   width_shift_range=0.2,\n",
+    "                                   height_shift_range=0.2,\n",
+    "                                   shear_range=0.7,\n",
+    "                                   zoom_range=[0.9, 2.2],\n",
+    "                                   horizontal_flip=True,\n",
+    "                                   vertical_flip=True,\n",
+    "                                   fill_mode='nearest')\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "        'warehouse/handwriting_shape/train',\n",
@@ -78,21 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4 모델 구성하기\n",
-    "# Conv Layer : 입력 이미지 크기 24 x 24, 입력 이미지 채널 3개, 필터 크기 3 x 3, 필터 수 32개, 활성화 함수 ‘relu’\n",
-    "# Conv Layer : 필터 크기 3 x 3, 필터 수 64개, 활성화 함수 ‘relu’\n",
-    "# MaxPooling Layer : 풀 크기 2 x 2\n",
-    "# Flatten\n",
-    "# Dense Layer : 출력 뉴런 수 128개, 활성화 함수 ‘relu’\n",
-    "# Dense Layer : 출력 뉴런 수 3개, 활성화 함수 ‘softmax’\n",
+    "# 4 모델 구성하기 \n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(filters=32, kernel_size=(3, 3), activation='relu', input_shape=(24, 24, 3))) # padding default = valid\n",
-    "model.add(Conv2D(filters=64, kernel_size=(3, 3), activation='relu')) \n",
+    "model.add(Conv2D(32, kernel_size=(3, 3), activation='relu', input_shape=(24,24,3)))\n",
+    "model.add(Conv2D(64, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='relu'))\n",
@@ -101,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -113,8 +149,8 @@
        "<g class=\"graph\" id=\"graph0\" transform=\"scale(1 1) rotate(0) translate(4 549)\">\n",
        "<title>G</title>\n",
        "<polygon fill=\"white\" points=\"-4,4 -4,-549 472,-549 472,4 -4,4\" stroke=\"none\"/>\n",
-       "<!-- 140684375213952 -->\n",
-       "<g class=\"node\" id=\"node1\"><title>140684375213952</title>\n",
+       "<!-- 140313743511168 -->\n",
+       "<g class=\"node\" id=\"node1\"><title>140313743511168</title>\n",
        "<polygon fill=\"none\" points=\"22,-498.5 22,-544.5 446,-544.5 446,-498.5 22,-498.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"131.5\" y=\"-517.8\">conv2d_1_input: InputLayer</text>\n",
        "<polyline fill=\"none\" points=\"241,-498.5 241,-544.5 \" stroke=\"black\"/>\n",
@@ -126,8 +162,8 @@
        "<polyline fill=\"none\" points=\"309,-521.5 446,-521.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"377.5\" y=\"-506.3\">(None, 24, 24, 3)</text>\n",
        "</g>\n",
-       "<!-- 140684375213896 -->\n",
-       "<g class=\"node\" id=\"node2\"><title>140684375213896</title>\n",
+       "<!-- 140313743422016 -->\n",
+       "<g class=\"node\" id=\"node2\"><title>140313743422016</title>\n",
        "<polygon fill=\"none\" points=\"51.5,-415.5 51.5,-461.5 416.5,-461.5 416.5,-415.5 51.5,-415.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"127\" y=\"-434.8\">conv2d_1: Conv2D</text>\n",
        "<polyline fill=\"none\" points=\"202.5,-415.5 202.5,-461.5 \" stroke=\"black\"/>\n",
@@ -139,13 +175,13 @@
        "<polyline fill=\"none\" points=\"270.5,-438.5 416.5,-438.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"343.5\" y=\"-423.3\">(None, 22, 22, 32)</text>\n",
        "</g>\n",
-       "<!-- 140684375213952&#45;&gt;140684375213896 -->\n",
-       "<g class=\"edge\" id=\"edge1\"><title>140684375213952-&gt;140684375213896</title>\n",
+       "<!-- 140313743511168&#45;&gt;140313743422016 -->\n",
+       "<g class=\"edge\" id=\"edge1\"><title>140313743511168-&gt;140313743422016</title>\n",
        "<path d=\"M234,-498.366C234,-490.152 234,-480.658 234,-471.725\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"237.5,-471.607 234,-461.607 230.5,-471.607 237.5,-471.607\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140684375213056 -->\n",
-       "<g class=\"node\" id=\"node3\"><title>140684375213056</title>\n",
+       "<!-- 140313743422352 -->\n",
+       "<g class=\"node\" id=\"node3\"><title>140313743422352</title>\n",
        "<polygon fill=\"none\" points=\"51.5,-332.5 51.5,-378.5 416.5,-378.5 416.5,-332.5 51.5,-332.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"127\" y=\"-351.8\">conv2d_2: Conv2D</text>\n",
        "<polyline fill=\"none\" points=\"202.5,-332.5 202.5,-378.5 \" stroke=\"black\"/>\n",
@@ -157,13 +193,13 @@
        "<polyline fill=\"none\" points=\"270.5,-355.5 416.5,-355.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"343.5\" y=\"-340.3\">(None, 20, 20, 64)</text>\n",
        "</g>\n",
-       "<!-- 140684375213896&#45;&gt;140684375213056 -->\n",
-       "<g class=\"edge\" id=\"edge2\"><title>140684375213896-&gt;140684375213056</title>\n",
+       "<!-- 140313743422016&#45;&gt;140313743422352 -->\n",
+       "<g class=\"edge\" id=\"edge2\"><title>140313743422016-&gt;140313743422352</title>\n",
        "<path d=\"M234,-415.366C234,-407.152 234,-397.658 234,-388.725\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"237.5,-388.607 234,-378.607 230.5,-388.607 237.5,-388.607\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140684375214512 -->\n",
-       "<g class=\"node\" id=\"node4\"><title>140684375214512</title>\n",
+       "<!-- 140313743510832 -->\n",
+       "<g class=\"node\" id=\"node4\"><title>140313743510832</title>\n",
        "<polygon fill=\"none\" points=\"0,-249.5 0,-295.5 468,-295.5 468,-249.5 0,-249.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"127\" y=\"-268.8\">max_pooling2d_1: MaxPooling2D</text>\n",
        "<polyline fill=\"none\" points=\"254,-249.5 254,-295.5 \" stroke=\"black\"/>\n",
@@ -175,13 +211,13 @@
        "<polyline fill=\"none\" points=\"322,-272.5 468,-272.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"395\" y=\"-257.3\">(None, 10, 10, 64)</text>\n",
        "</g>\n",
-       "<!-- 140684375213056&#45;&gt;140684375214512 -->\n",
-       "<g class=\"edge\" id=\"edge3\"><title>140684375213056-&gt;140684375214512</title>\n",
+       "<!-- 140313743422352&#45;&gt;140313743510832 -->\n",
+       "<g class=\"edge\" id=\"edge3\"><title>140313743422352-&gt;140313743510832</title>\n",
        "<path d=\"M234,-332.366C234,-324.152 234,-314.658 234,-305.725\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"237.5,-305.607 234,-295.607 230.5,-305.607 237.5,-305.607\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140684375331616 -->\n",
-       "<g class=\"node\" id=\"node5\"><title>140684375331616</title>\n",
+       "<!-- 140313709543320 -->\n",
+       "<g class=\"node\" id=\"node5\"><title>140313709543320</title>\n",
        "<polygon fill=\"none\" points=\"57,-166.5 57,-212.5 411,-212.5 411,-166.5 57,-166.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"127\" y=\"-185.8\">flatten_1: Flatten</text>\n",
        "<polyline fill=\"none\" points=\"197,-166.5 197,-212.5 \" stroke=\"black\"/>\n",
@@ -193,13 +229,13 @@
        "<polyline fill=\"none\" points=\"265,-189.5 411,-189.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"338\" y=\"-174.3\">(None, 6400)</text>\n",
        "</g>\n",
-       "<!-- 140684375214512&#45;&gt;140684375331616 -->\n",
-       "<g class=\"edge\" id=\"edge4\"><title>140684375214512-&gt;140684375331616</title>\n",
+       "<!-- 140313743510832&#45;&gt;140313709543320 -->\n",
+       "<g class=\"edge\" id=\"edge4\"><title>140313743510832-&gt;140313709543320</title>\n",
        "<path d=\"M234,-249.366C234,-241.152 234,-231.658 234,-222.725\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"237.5,-222.607 234,-212.607 230.5,-222.607 237.5,-222.607\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140684366604832 -->\n",
-       "<g class=\"node\" id=\"node6\"><title>140684366604832</title>\n",
+       "<!-- 140313709732416 -->\n",
+       "<g class=\"node\" id=\"node6\"><title>140313709732416</title>\n",
        "<polygon fill=\"none\" points=\"81,-83.5 81,-129.5 387,-129.5 387,-83.5 81,-83.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"145\" y=\"-102.8\">dense_1: Dense</text>\n",
        "<polyline fill=\"none\" points=\"209,-83.5 209,-129.5 \" stroke=\"black\"/>\n",
@@ -211,13 +247,13 @@
        "<polyline fill=\"none\" points=\"277,-106.5 387,-106.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"332\" y=\"-91.3\">(None, 128)</text>\n",
        "</g>\n",
-       "<!-- 140684375331616&#45;&gt;140684366604832 -->\n",
-       "<g class=\"edge\" id=\"edge5\"><title>140684375331616-&gt;140684366604832</title>\n",
+       "<!-- 140313709543320&#45;&gt;140313709732416 -->\n",
+       "<g class=\"edge\" id=\"edge5\"><title>140313709543320-&gt;140313709732416</title>\n",
        "<path d=\"M234,-166.366C234,-158.152 234,-148.658 234,-139.725\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"237.5,-139.607 234,-129.607 230.5,-139.607 237.5,-139.607\" stroke=\"black\"/>\n",
        "</g>\n",
-       "<!-- 140684366668968 -->\n",
-       "<g class=\"node\" id=\"node7\"><title>140684366668968</title>\n",
+       "<!-- 140313709274280 -->\n",
+       "<g class=\"node\" id=\"node7\"><title>140313709274280</title>\n",
        "<polygon fill=\"none\" points=\"85.5,-0.5 85.5,-46.5 382.5,-46.5 382.5,-0.5 85.5,-0.5\" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"149.5\" y=\"-19.8\">dense_2: Dense</text>\n",
        "<polyline fill=\"none\" points=\"213.5,-0.5 213.5,-46.5 \" stroke=\"black\"/>\n",
@@ -229,8 +265,8 @@
        "<polyline fill=\"none\" points=\"281.5,-23.5 382.5,-23.5 \" stroke=\"black\"/>\n",
        "<text font-family=\"Times,serif\" font-size=\"14.00\" text-anchor=\"middle\" x=\"332\" y=\"-8.3\">(None, 3)</text>\n",
        "</g>\n",
-       "<!-- 140684366604832&#45;&gt;140684366668968 -->\n",
-       "<g class=\"edge\" id=\"edge6\"><title>140684366604832-&gt;140684366668968</title>\n",
+       "<!-- 140313709732416&#45;&gt;140313709274280 -->\n",
+       "<g class=\"edge\" id=\"edge6\"><title>140313709732416-&gt;140313709274280</title>\n",
        "<path d=\"M234,-83.3664C234,-75.1516 234,-65.6579 234,-56.7252\" fill=\"none\" stroke=\"black\"/>\n",
        "<polygon fill=\"black\" points=\"237.5,-56.6068 234,-46.6068 230.5,-56.6069 237.5,-56.6068\" stroke=\"black\"/>\n",
        "</g>\n",
@@ -241,7 +277,7 @@
        "<IPython.core.display.SVG object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,56 +293,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5 모델 학습과정 설정하기\n",
     "\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "15/15 [==============================] - 1s 52ms/step - loss: 1.0100 - acc: 0.7778 - val_loss: 0.5634 - val_acc: 1.0000\n",
-      "Epoch 2/3\n",
-      "15/15 [==============================] - 1s 37ms/step - loss: 0.2212 - acc: 1.0000 - val_loss: 0.0976 - val_acc: 1.0000\n",
-      "Epoch 3/3\n",
-      "15/15 [==============================] - 1s 34ms/step - loss: 0.0241 - acc: 1.0000 - val_loss: 0.0991 - val_acc: 0.9333\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7ff3a0afada0>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 6 모델 학습시키기\n",
-    "# generator = 훈련데이터를 제공한다\n",
-    "# steps_per_epoch = 한 epoch에서 사용할 step count 이다. 45개의 훈련 데이터가 있고, batch_size = 3 이므로 45/3 = 15 로 정한다.\n",
-    "# validation_data = 검증데이터를 제공한다.\n",
-    "# validation_steps = 한 epoch 종료 시 마다 검증할 때 사용되는 검증 스텝 수를 지정한다. 15개의 검증 데이터가 있고 batch_size = 3 이므로 15/3 = 5 으로 정한다.\n",
-    "\n",
-    "model.fit_generator(\n",
-    "    generator=train_generator,\n",
-    "    steps_per_epoch=15,\n",
-    "    epochs=3,\n",
-    "    validation_data=test_generator,\n",
-    "    validation_steps=5)"
    ]
   },
   {
@@ -318,17 +311,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Evaluate --\n",
-      "acc: 93.33%\n"
+      "Epoch 1/3\n",
+      "1500/1500 [==============================] - 42s 28ms/step - loss: 0.4273 - acc: 0.8196 - val_loss: 0.2084 - val_acc: 0.9333\n",
+      "Epoch 2/3\n",
+      "1500/1500 [==============================] - 41s 27ms/step - loss: 0.1839 - acc: 0.9373 - val_loss: 0.0681 - val_acc: 1.0000\n",
+      "Epoch 3/3\n",
+      "1500/1500 [==============================] - 41s 27ms/step - loss: 0.1194 - acc: 0.9564 - val_loss: 2.5744e-04 - val_acc: 1.0000\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f9d4ef8b860>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 7 모델 평가하기\n",
+    "# 6 모델 학습시키기\n",
     "\n",
-    "print(\"-- Evaluate --\")\n",
-    "scores = model.evaluate_generator(test_generator, steps=5)\n",
-    "print(\"%s: %.2f%%\" %(model.metrics_names[1], scores[1]*100))"
+    "model.fit_generator(\n",
+    "        train_generator,\n",
+    "        steps_per_epoch=15 * 100,\n",
+    "        epochs=3,\n",
+    "        validation_data=test_generator,\n",
+    "        validation_steps=5)"
    ]
   },
   {
@@ -340,31 +350,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- Predict --\n",
-      "{'rectangle': 1, 'triangle': 2, 'circle': 0}\n",
-      "[[1.000 0.000 0.000]\n",
-      " [0.989 0.005 0.006]\n",
-      " [0.000 0.000 1.000]\n",
-      " [1.000 0.000 0.000]\n",
-      " [0.008 0.992 0.000]\n",
-      " [0.044 0.956 0.000]\n",
-      " [0.000 0.000 1.000]\n",
-      " [0.000 0.000 1.000]\n",
-      " [0.661 0.267 0.072]\n",
-      " [0.999 0.001 0.000]\n",
-      " [1.000 0.000 0.000]\n",
-      " [0.000 0.001 0.999]\n",
-      " [0.013 0.987 0.000]\n",
-      " [0.000 0.003 0.997]\n",
-      " [0.079 0.920 0.001]]\n"
+      "-- Evaluate --\n",
+      "acc: 100.00%\n"
      ]
     }
    ],
    "source": [
-    "# 8 모델 사용하기\n",
+    "# 7 모델 평가하기\n",
+    "print(\"-- Evaluate --\")\n",
+    "\n",
+    "scores = model.evaluate_generator(test_generator, steps = 5)\n",
+    "print(\"%s: %.2f%%\" %(model.metrics_names[1], scores[1]*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Predict --\n",
+      "{'triangle': 2, 'circle': 0, 'rectangle': 1}\n",
+      "[[0.001 0.000 0.999]\n",
+      " [0.000 1.000 0.000]\n",
+      " [0.001 0.000 0.999]\n",
+      " [0.000 1.000 0.000]\n",
+      " [0.001 0.000 0.999]\n",
+      " [1.000 0.000 0.000]\n",
+      " [0.000 0.000 1.000]\n",
+      " [0.000 1.000 0.000]\n",
+      " [1.000 0.000 0.000]\n",
+      " [1.000 0.000 0.000]\n",
+      " [0.000 1.000 0.000]\n",
+      " [0.000 1.000 0.000]\n",
+      " [1.000 0.000 0.000]\n",
+      " [1.000 0.000 0.000]\n",
+      " [0.000 0.000 1.000]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8 모델 예측하기\n",
     "\n",
     "print(\"-- Predict --\")\n",
-    "output = model.predict_generator(test_generator, steps=5)\n",
+    "output = model.predict_generator(test_generator, steps = 5)\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{0:0.3f}\".format(x)})\n",
     "\n",
     "print(test_generator.class_indices)\n",
