--- a/04_DeepLearning_from_Scratch/3_ch3/4_3rd_layer_ANN/2_implement_signal_of_each_layer.ipynb
+++ b/04_DeepLearning_from_Scratch/3_ch3/4_3rd_layer_ANN/2_implement_signal_of_each_layer.ipynb
@@ -6,12 +6,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Image, display"
+    "from IPython.display import Image, display\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# activate function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1/(1+np.exp(-x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identity(x):\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3_layer ANN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -26,28 +61,8 @@
     }
    ],
    "source": [
-    "with open('02_implement_signal_of_each_layer/02_implement_signal_of_each_layer.png','rb') as f:\n",
+    "with open('2_implement_signal_of_each_layer/2_implement_signal_of_each_layer.png','rb') as f:\n",
     "    display(Image(f.read()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = np.array([1.0,0.5])\n",
-    "W1 = np.array([[0.1,0.3,0.5],[0.2,0.4,0.6]])\n",
-    "B1 = np.array([0.1,0.2,0.3])"
    ]
   },
   {
@@ -56,7 +71,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A1 = np.dot(X, W1) + B1"
+    "X = np.array([1.0,0.5])\n",
+    "W1 = np.array([[0.1,0.3,0.5],[0.2,0.4,0.6]])\n",
+    "B1 = np.array([0.1,0.2,0.3])\n",
+    "W2 = np.array([[0.1,0.4],[0.2,0.5],[0.3,0.6]])\n",
+    "B2 = np.array([0.1,0.2])\n",
+    "W3 = np.array([[0.1,0.3],[0.2,0.4]])\n",
+    "B3 = np.array([0.1,0.2])"
    ]
   },
   {
@@ -76,15 +97,180 @@
     }
    ],
    "source": [
+    "A1 = np.dot(X, W1) + B1\n",
     "A1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.57444252, 0.66818777, 0.75026011])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z1 = sigmoid(A1)\n",
+    "Z1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.51615984, 1.21402696])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A2 = np.dot(Z1,W2) + B2\n",
+    "A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.62624937, 0.7710107 ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z2 = sigmoid(A2)\n",
+    "Z2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.31682708, 0.69627909])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A3 = np.dot(Z2, W3) + B3\n",
+    "A3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matirx dot product as function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_next_layer(activate_function, in_layout, weight, bias):\n",
+    "    if (in_layout.shape[0] != weight.shape[0]):\n",
+    "        raise ValueError(\"in_layout, weight shape are not available for matrix dot product\")\n",
+    "    if (1 != bias.ndim):\n",
+    "        raise ValueError(\"bias dimension is not 1\")\n",
+    "    if (weight.shape[1] != bias.shape[0]):\n",
+    "        raise ValueError(\"weight, bias shape are not available for matrix plus\")\n",
+    "    next_layer = np.dot(in_layout, weight) + bias\n",
+    "    return activate_function(next_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.57444252, 0.66818777, 0.75026011])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z1 = get_next_layer(sigmoid, X, W1, B1)\n",
+    "Z1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.62624937, 0.7710107 ])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z2 = get_next_layer(sigmoid, Z1, W2, B2)\n",
+    "Z2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.31682708, 0.69627909])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z3 = get_next_layer(identity, Z2, W3, B3)\n",
+    "Z3"
+   ]
   }
  ],
  "metadata": {
