#84-cee-with-mini-batch ``` modified:   .gitignore modified:   04_DeepLearning_from_Scratch/3_ch3/6_MNIST/1_MNIST_dataset.ipynb modified:   04_DeepLearning_from_Scratch/3_ch3/6_MNIST/2_predict_with_ANN_forward_propagation.ipynb modified:   04_DeepLearning_from_Scratch/3_ch3/6_MNIST/3_predict_with_ANN_forward_propagation_with_batch.ipynb renamed:    04_DeepLearning_from_Scratch/4_ch4/1_Learning_from_data/2_loss_function.ipynb -> 04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/1_Mean_squred_error.ipynb new file:   04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/2_Cross_entropy_error.ipynb new file:   04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/3_Mean_squred_error_with_mini_batch.ipynb new file:   04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/4_Cross_entropy_error_with_mini_batch.ipynb renamed:    04_DeepLearning_from_Scratch/3_ch3/6_MNIST/mnist.py -> 04_DeepLearning_from_Scratch/dataset/mnist.py renamed:    04_DeepLearning_from_Scratch/3_ch3/6_MNIST/sample_weight.pkl -> 04_DeepLearning_from_Scratch/dataset/sample_weight.pkl modified:   README.md ```

--- a/04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/1_Mean_squred_error.ipynb
+++ b/04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/1_Mean_squred_error.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learing = Gain optimal value of weight variable from training data\n",
-    "## Learing = reduce output of loss function = find the weight variable"
+    "# MSE"
    ]
   },
   {
@@ -14,14 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MSE"
+    "import numpy as np\n",
+    "import pickle"
    ]
   },
   {
@@ -83,64 +76,6 @@
    ],
    "source": [
     "mean_squared_error(np.array(y2), np.array(t))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CEE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cross_entropy_error(y, t):\n",
-    "    delta = 1e-7\n",
-    "    return -np.sum(t*np.log(y+delta))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.510825457099338"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cross_entropy_error(np.array(y1), np.array(t))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.302584092994546"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cross_entropy_error(np.array(y2), np.array(t))"
    ]
   }
  ],
