--- a/04_DeepLearning_from_Scratch/3_ch3/6_MNIST/2_predict_with_ANN_forward_propagation.ipynb
+++ b/04_DeepLearning_from_Scratch/3_ch3/6_MNIST/2_predict_with_ANN_forward_propagation.ipynb
@@ -4,11 +4,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../.. <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
-    "from mnist import load_mnist\n",
-    "import pickle\n",
-    "import numpy as np"
+    "import sys, os\n",
+    "path = '../..'\n",
+    "print(path, type(path))\n",
+    "sys.path.append(path)"
    ]
   },
   {
@@ -17,12 +26,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=True)"
+    "from dataset.mnist import load_mnist\n",
+    "import pickle\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +54,14 @@
     }
    ],
    "source": [
-    "with open('sample_weight.pkl', 'rb') as f:\n",
+    "with open('../../dataset/sample_weight.pkl', 'rb') as f:\n",
     "    network = pickle.load(f)\n",
     "print(type(network))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
