--- a/04_DeepLearning_from_Scratch/4_ch4/4_Gradient/1_Gradient_descent.ipynb
+++ b/04_DeepLearning_from_Scratch/4_ch4/4_Gradient/1_Gradient_descent.ipynb
@@ -23,8 +23,7 @@
    "outputs": [],
    "source": [
     "def f_2(x):\n",
-    "    return x[0]**2 + x[1]**2\n",
-    "#     return np.sum(x**2)"
+    "    return x[0]**2 + x[1]**2"
    ]
   },
   {
@@ -54,9 +53,10 @@
    "outputs": [],
    "source": [
     "def numerical_gradient(f, x):\n",
-    "    gradient = np.zeros_like(x)\n",
+    "    print(x.shape, x.ndim, x)\n",
     "    h = 1e-4 # 0.0001\n",
-    "    for i in range(0, x.size):\n",
+    "    gradient = np.zeros_like(x)\n",
+    "    for i in range(0, x.size): # x.ndim == 1 인 경우만 가능\n",
     "        tmp_val = x[i]\n",
     "        \n",
     "        # f(x+h)\n",
@@ -77,6 +77,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,) 1 [3. 4.]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "array([6., 8.])"
@@ -88,7 +95,132 @@
     }
    ],
    "source": [
-    "numerical_gradient(f_2, np.array([3.0, 4.0]))"
+    "x0 = np.array([3.0, 4.0])\n",
+    "numerical_gradient(f_2, x0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,) 1 [4. 5.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8., 10.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = np.array([4.0, 5.0])\n",
+    "numerical_gradient(f_2, x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numerical_gradient(f, x, print_status=False):\n",
+    "    if print_status:\n",
+    "        print('x.shape =', x.shape, 'x.ndim =', x.ndim, '\\nx =', x)\n",
+    "    h = 1e-4 # 0.0001\n",
+    "    gradient = np.zeros_like(x)\n",
+    "    it = np.nditer(x, flags=['multi_index'], op_flags=['readwrite']) # x.ndim >= 1 인 경우 모두 가능\n",
+    "    while not it.finished:\n",
+    "        idx = it.multi_index\n",
+    "        tmp_val = x[idx]\n",
+    "        # f(x+h)\n",
+    "        x[idx] = float(tmp_val) + h\n",
+    "        fxh1 = f(x)\n",
+    "        if print_status:\n",
+    "            print('idx =', idx, 'x+h =', x[idx], 'f(x+h) =', fxh1)\n",
+    "        # f(x-h)\n",
+    "        x[idx] = tmp_val - h \n",
+    "        fxh2 = f(x)\n",
+    "        if print_status:\n",
+    "            print('idx =', idx, 'x-h =', x[idx], 'f(x-h) =', fxh2)\n",
+    "        gradient[idx] = (fxh1 - fxh2) / (2*h)\n",
+    "        # 값 복원\n",
+    "        x[idx] = tmp_val \n",
+    "        it.iternext()      \n",
+    "    return gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape = (2,) x.ndim = 1 \n",
+      "x = [3. 4.]\n",
+      "idx = (0,) x+h = 3.0001 f(x+h) = 25.00060001\n",
+      "idx = (0,) x-h = 2.9999 f(x-h) = 24.99940001\n",
+      "idx = (1,) x+h = 4.0001 f(x+h) = 25.00080001\n",
+      "idx = (1,) x-h = 3.9999 f(x-h) = 24.99920001\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([6., 8.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_gradient(f_2, x0, print_status=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape = (2,) x.ndim = 1 \n",
+      "x = [4. 5.]\n",
+      "idx = (0,) x+h = 4.0001 f(x+h) = 41.00080001\n",
+      "idx = (0,) x-h = 3.9999 f(x-h) = 40.999200009999996\n",
+      "idx = (1,) x+h = 5.0001 f(x+h) = 41.00100001\n",
+      "idx = (1,) x-h = 4.9999 f(x-h) = 40.99900001\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8., 10.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_gradient(f_2, x1, print_status=True)"
    ]
   },
   {
@@ -100,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +319,7 @@
        "       [-4. , -3.8, -3.6, ...,  3.6,  3.8,  4. ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +411,7 @@
        "array([-6.11110793e-10,  8.14814391e-10])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +431,7 @@
        "array([-2.58983747e+13, -1.29524862e+12])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +451,7 @@
        "array([-2.99999994,  3.99999992])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
