--- a/04_DeepLearning_from_Scratch/4_ch4/4_Gradient/2_Slope_on_ANN.ipynb
+++ b/04_DeepLearning_from_Scratch/4_ch4/4_Gradient/2_Slope_on_ANN.ipynb
@@ -1,19 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Slope on ANN = The slope of the loss function with respect to the weight parameter"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys, os\n",
+    "sys.path.append('../../')\n",
+    "from common.gradient import numerical_gradient\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Slope on ANN = The slope of the loss function with respect to the weight parameter"
    ]
   },
   {
@@ -48,13 +51,11 @@
     "            t = t.argmax(axis=1)\n",
     "             \n",
     "        batch_size = y.shape[0]\n",
-    "        print('batch_size =', batch_size)\n",
     "        return -np.sum(np.log(y[np.arange(batch_size), t] + 1e-7)) / batch_size\n",
     "    \n",
     "    def loss(self, x, t):\n",
     "        z = self.predict(x)\n",
     "        y = self.softmax(z)\n",
-    "        print('y.shape =', y.shape, 'y.ndim =', y.ndim, 'y =', y)\n",
     "        return self.cross_entropy_error(y, z)"
    ]
   },
@@ -82,8 +83,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.23984704,  0.34491688,  2.23902429],\n",
-       "       [-0.90642756, -0.04713224,  0.17343906]])"
+       "array([[-0.64599846, -0.55924081,  1.28988783],\n",
+       "       [ 1.31059358, -0.7128058 ,  0.21212569]])"
       ]
      },
      "execution_count": 4,
@@ -191,14 +192,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y.shape = (3,) y.ndim = 1 y = [0.36540923 0.23927209 0.39531868]\n",
-      "batch_size = 1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "0.9280627939898086"
@@ -234,85 +227,26 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def numerical_gradient(f, x):\n",
-    "#     h = 1e-4 # 0.0001\n",
-    "#     gradient = np.zeros_like(x)\n",
-    "#     for i in range(0, x.size):\n",
-    "#         tmp_val = x[i]\n",
-    "#         # f(x+h)\n",
-    "#         x[i] = float(tmp_val) + h\n",
-    "#         fx_right = f(x)\n",
-    "#         # f(x-h)\n",
-    "#         x[i] = float(tmp_val) - h\n",
-    "#         fx_left = f(x)\n",
-    "#         # gradient\n",
-    "#         gradient[i] = (fx_right - fx_left) / (2*h)\n",
-    "#         # 값 복원\n",
-    "#         x[i] = tmp_val\n",
-    "#     return gradient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def numerical_gradient(f, x):\n",
-    "    h = 1e-4 # 0.0001\n",
-    "    gradient = np.zeros_like(x)\n",
-    "    it = np.nditer(x, flags=['multi_index'], op_flags=['readwrite'])\n",
-    "    while not it.finished:\n",
-    "        idx = it.multi_index\n",
-    "        tmp_val = x[idx]\n",
-    "        # f(x+h)\n",
-    "        x[idx] = float(tmp_val) + h\n",
-    "        fxh1 = f(x) \n",
-    "        # f(x-h)\n",
-    "        x[idx] = tmp_val - h \n",
-    "        fxh2 = f(x) \n",
-    "        gradient[idx] = (fxh1 - fxh2) / (2*h)\n",
-    "        # 값 복원\n",
-    "        x[idx] = tmp_val \n",
-    "        it.iternext()      \n",
-    "    return gradient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y.shape = (3,) y.ndim = 1 y = [0.36542314 0.23926684 0.39531002]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36539531 0.23927734 0.39532735]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36540398 0.23928301 0.39531301]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36541447 0.23926117 0.39532436]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36540056 0.23926642 0.39533303]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36541789 0.23927777 0.39530434]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.3654301  0.23926422 0.39530568]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36538836 0.23927996 0.39533168]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36540136 0.23928847 0.39531017]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36541709 0.23925571 0.3953272 ]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36539623 0.23926358 0.3953402 ]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36542223 0.2392806  0.39529717]\n",
-      "batch_size = 1\n"
+      "x.shape = (2, 3) x.ndim = 2 \n",
+      "x = [[0.47355232 0.9977393  0.84668094]\n",
+      " [0.85555741 0.03563661 0.69422093]]\n",
+      "idx = (0, 0) x+h = 0.47365232 f(x+h) = 0.9280847189552238\n",
+      "idx = (0, 0) x-h = 0.47345232000000004 f(x-h) = 0.9280408698591798\n",
+      "idx = (0, 1) x+h = 0.9978393 f(x+h) = 0.928077150639272\n",
+      "idx = (0, 1) x-h = 0.9976393 f(x-h) = 0.9280484379956203\n",
+      "idx = (0, 2) x+h = 0.84678094 f(x+h) = 0.9280265135502431\n",
+      "idx = (0, 2) x-h = 0.8465809400000001 f(x-h) = 0.9280990752899237\n",
+      "idx = (1, 0) x+h = 0.855657411 f(x+h) = 0.9280956817509809\n",
+      "idx = (1, 0) x-h = 0.8554574110000001 f(x-h) = 0.9280299081069064\n",
+      "idx = (1, 1) x+h = 0.03573661 f(x+h) = 0.9280843292097382\n",
+      "idx = (1, 1) x-h = 0.035536609999999996 f(x-h) = 0.9280412602442478\n",
+      "idx = (1, 2) x+h = 0.69432093 f(x+h) = 0.9280083736531699\n",
+      "idx = (1, 2) x-h = 0.69412093 f(x-h) = 0.9281172162626843\n"
      ]
     },
     {
@@ -322,13 +256,13 @@
        "       [ 0.32886822,  0.21534483, -0.54421305]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dW = numerical_gradient(f, net.W)\n",
+    "dW = numerical_gradient(f, net.W, print_status=True)\n",
     "dW"
    ]
   },
@@ -341,37 +275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y.shape = (3,) y.ndim = 1 y = [0.36542314 0.23926684 0.39531002]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36539531 0.23927734 0.39532735]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36540398 0.23928301 0.39531301]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36541447 0.23926117 0.39532436]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36540056 0.23926642 0.39533303]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36541789 0.23927777 0.39530434]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.3654301  0.23926422 0.39530568]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36538836 0.23927996 0.39533168]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36540136 0.23928847 0.39531017]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36541709 0.23925571 0.3953272 ]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36539623 0.23926358 0.3953402 ]\n",
-      "batch_size = 1\n",
-      "y.shape = (3,) y.ndim = 1 y = [0.36542223 0.2392806  0.39529717]\n",
-      "batch_size = 1\n"
+      "x.shape = (2, 3) x.ndim = 2 \n",
+      "x = [[0.47355232 0.9977393  0.84668094]\n",
+      " [0.85555741 0.03563661 0.69422093]]\n",
+      "idx = (0, 0) x+h = 0.47365232 f(x+h) = 0.9280847189552238\n",
+      "idx = (0, 0) x-h = 0.47345232000000004 f(x-h) = 0.9280408698591798\n",
+      "idx = (0, 1) x+h = 0.9978393 f(x+h) = 0.928077150639272\n",
+      "idx = (0, 1) x-h = 0.9976393 f(x-h) = 0.9280484379956203\n",
+      "idx = (0, 2) x+h = 0.84678094 f(x+h) = 0.9280265135502431\n",
+      "idx = (0, 2) x-h = 0.8465809400000001 f(x-h) = 0.9280990752899237\n",
+      "idx = (1, 0) x+h = 0.855657411 f(x+h) = 0.9280956817509809\n",
+      "idx = (1, 0) x-h = 0.8554574110000001 f(x-h) = 0.9280299081069064\n",
+      "idx = (1, 1) x+h = 0.03573661 f(x+h) = 0.9280843292097382\n",
+      "idx = (1, 1) x-h = 0.035536609999999996 f(x-h) = 0.9280412602442478\n",
+      "idx = (1, 2) x+h = 0.69432093 f(x+h) = 0.9280083736531699\n",
+      "idx = (1, 2) x-h = 0.69412093 f(x-h) = 0.9281172162626843\n"
      ]
     },
     {
@@ -381,14 +306,14 @@
        "       [ 0.32886822,  0.21534483, -0.54421305]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "f = lambda w: net.loss(x, t)\n",
-    "dW = numerical_gradient(f, net.W)\n",
+    "dW = numerical_gradient(f, net.W, print_status=True)\n",
     "dW"
    ]
   }
