#89-modify-softmax ``` modified:   04_DeepLearning_from_Scratch/4_ch4/4_Gradient/2_Slope_on_ANN.ipynb new file:   04_DeepLearning_from_Scratch/common/functions.py ```

--- a/04_DeepLearning_from_Scratch/4_ch4/4_Gradient/2_Slope_on_ANN.ipynb
+++ b/04_DeepLearning_from_Scratch/4_ch4/4_Gradient/2_Slope_on_ANN.ipynb
@@ -9,6 +9,7 @@
     "import sys, os\n",
     "sys.path.append('../../')\n",
     "from common.gradient import numerical_gradient\n",
+    "from common.functions import softmax\n",
     "import numpy as np"
    ]
   },
@@ -32,15 +33,6 @@
     "    def predict(self, x):\n",
     "        return np.dot(x, self.W)\n",
     "\n",
-    "    def softmax(self, x):\n",
-    "        if x.ndim == 2:\n",
-    "            x = x.T\n",
-    "            x = x - np.max(x, axis=0) # overflow\n",
-    "            y = np.exp(x) / np.sum(np.exp(x), axis=0)\n",
-    "            return y.T \n",
-    "        x = x - np.max(x) # overflow\n",
-    "        return np.exp(x) / np.sum(np.exp(x))\n",
-    "\n",
     "    def cross_entropy_error(self, y, t):\n",
     "        if y.ndim == 1:\n",
     "            t = t.reshape(1, t.size)\n",
@@ -55,7 +47,7 @@
     "    \n",
     "    def loss(self, x, t):\n",
     "        z = self.predict(x)\n",
-    "        y = self.softmax(z)\n",
+    "        y = softmax(z)\n",
     "        return self.cross_entropy_error(y, z)"
    ]
   },
@@ -83,8 +75,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.64599846, -0.55924081,  1.28988783],\n",
-       "       [ 1.31059358, -0.7128058 ,  0.21212569]])"
+       "array([[-2.18388879, -0.31394738,  0.30983899],\n",
+       "       [-0.12552112, -0.84188114, -1.3445247 ]])"
       ]
      },
      "execution_count": 4,
@@ -101,15 +93,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "net.W = np.array([[0.47355232, 0.9977393, 0.84668094], [0.855557411, 0.03563661, 0.69422093]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -118,18 +101,19 @@
        "       [0.85555741, 0.03563661, 0.69422093]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "net.W = np.array([[0.47355232, 0.9977393, 0.84668094], [0.855557411, 0.03563661, 0.69422093]])\n",
     "net.W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +131,7 @@
        "array([1.05413306, 0.63071653, 1.1328074 ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +152,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +181,7 @@
        "0.9280627939898086"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,12 +199,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def f(W):\n",
     "    return net.loss(x, t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape = (2, 3) x.ndim = 2 \n",
+      "x = [[0.47355232 0.9977393  0.84668094]\n",
+      " [0.85555741 0.03563661 0.69422093]]\n",
+      "idx = (0, 0) x+h = 0.47365232 f(x+h) = 0.9280847189552238\n",
+      "idx = (0, 0) x-h = 0.47345232000000004 f(x-h) = 0.9280408698591798\n",
+      "idx = (0, 1) x+h = 0.9978393 f(x+h) = 0.928077150639272\n",
+      "idx = (0, 1) x-h = 0.9976393 f(x-h) = 0.9280484379956203\n",
+      "idx = (0, 2) x+h = 0.84678094 f(x+h) = 0.9280265135502431\n",
+      "idx = (0, 2) x-h = 0.8465809400000001 f(x-h) = 0.9280990752899237\n",
+      "idx = (1, 0) x+h = 0.855657411 f(x+h) = 0.9280956817509809\n",
+      "idx = (1, 0) x-h = 0.8554574110000001 f(x-h) = 0.9280299081069064\n",
+      "idx = (1, 1) x+h = 0.03573661 f(x+h) = 0.9280843292097382\n",
+      "idx = (1, 1) x-h = 0.035536609999999996 f(x-h) = 0.9280412602442478\n",
+      "idx = (1, 2) x+h = 0.69432093 f(x+h) = 0.9280083736531699\n",
+      "idx = (1, 2) x-h = 0.69412093 f(x-h) = 0.9281172162626843\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.21924548,  0.14356322, -0.3628087 ],\n",
+       "       [ 0.32886822,  0.21534483, -0.54421305]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dW = numerical_gradient(f, net.W, print_status=True)\n",
+    "dW"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use lambda"
    ]
   },
   {
@@ -257,56 +291,6 @@
       ]
      },
      "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dW = numerical_gradient(f, net.W, print_status=True)\n",
-    "dW"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Use lambda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x.shape = (2, 3) x.ndim = 2 \n",
-      "x = [[0.47355232 0.9977393  0.84668094]\n",
-      " [0.85555741 0.03563661 0.69422093]]\n",
-      "idx = (0, 0) x+h = 0.47365232 f(x+h) = 0.9280847189552238\n",
-      "idx = (0, 0) x-h = 0.47345232000000004 f(x-h) = 0.9280408698591798\n",
-      "idx = (0, 1) x+h = 0.9978393 f(x+h) = 0.928077150639272\n",
-      "idx = (0, 1) x-h = 0.9976393 f(x-h) = 0.9280484379956203\n",
-      "idx = (0, 2) x+h = 0.84678094 f(x+h) = 0.9280265135502431\n",
-      "idx = (0, 2) x-h = 0.8465809400000001 f(x-h) = 0.9280990752899237\n",
-      "idx = (1, 0) x+h = 0.855657411 f(x+h) = 0.9280956817509809\n",
-      "idx = (1, 0) x-h = 0.8554574110000001 f(x-h) = 0.9280299081069064\n",
-      "idx = (1, 1) x+h = 0.03573661 f(x+h) = 0.9280843292097382\n",
-      "idx = (1, 1) x-h = 0.035536609999999996 f(x-h) = 0.9280412602442478\n",
-      "idx = (1, 2) x+h = 0.69432093 f(x+h) = 0.9280083736531699\n",
-      "idx = (1, 2) x-h = 0.69412093 f(x-h) = 0.9281172162626843\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.21924548,  0.14356322, -0.3628087 ],\n",
-       "       [ 0.32886822,  0.21534483, -0.54421305]])"
-      ]
-     },
-     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
